some more features

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -8,5 +8,6 @@
   "loggedIn": "Logged In",
   "waiting": "Waiting...",
   "spanish": "Spanish",
-  "english": "English"
+  "english": "English",
+  "homePage": "Home Page"
 }
