--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -8,5 +8,6 @@
   "loggedIn": "Conectado",
   "waiting": "Esperando...",
   "spanish": "Español",
-  "english": "Inglés"
+  "english": "Inglés",
+  "homePage": "Página de inicio"
 }
