--- a/src/components/Language/langs/en.json
+++ b/src/components/Language/langs/en.json
@@ -9,5 +9,6 @@
   "waiting": "Waiting...",
   "spanish": "Spanish",
   "english": "English",
-  "homePage": "Home Page"
+  "homePage": "Home Page",
+  "homePageMobile": "Home Page Mobile"
 }
