--- a/src/components/Language/langs/es.json
+++ b/src/components/Language/langs/es.json
@@ -9,5 +9,6 @@
   "waiting": "Esperando...",
   "spanish": "Español",
   "english": "Inglés",
-  "homePage": "Página de inicio"
+  "homePage": "Página de inicio",
+  "homePageMobile": "Página de inicio mobile"
 }
